--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lucide-react": "^0.475.0",
     "next": "14.2.5",
     "next-themes": "^0.4.4",
+    "nextjs-toploader": "^3.9.17",
     "puppeteer": "^24.19.0",
     "react": "^18",
     "react-countup": "^6.5.3",
